--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vue-camera-capacitor",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Componente de Vue.js que permite a un usuario tomar fotos y manejar archivos de imagen",
-  "main": "index.js",
+  "main": "index.vue",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
